# GraphRAG-Pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py
docs/: PERFORMANCE_NOTES.md  ROADMAP.md  architecture_diagram.md
src/: chatbot.py  graders.py  graph_nodes.py  graph_state.py  ingest.py  main.py  preprocess.py  schema.py
tests/: README.md  conftest.py  run_tests.py  test_advanced_rag_integration.py  test_caching_mechanism.py  test_chatbot.py  test_graph_nodes.py  test_graph_state.py  test_ingest.py  test_new_tools.py  test_pipeline_integration.py  test_preprocess.py  test_schema.py  verify_integration.py
